# wavinwav

./: README.md  pyproject.toml  requirements.txt  test.py
tutorial/: first_nim.py
tutorials/: first_nim.py  run_train_job.py
wavinwav/: config.py  model.py
wavinwav/modules/: block.py  conv.py  model.py  noise.py
wavinwav/train/: __init__.py  adversarial.py  data.py  loss.py  trainer.py
